--- a/demo3.html
+++ b/demo3.html
@@ -10,6 +10,9 @@
 //
 
         var li =document.getElementsByClassName('div1');
+        function sayhello(){
+            alert('hello world')
+        }
     </script>
 </head>
 <body>
